<resources>
    <string name="app_name">EchoNote</string>
    <string name="app_logo">App Logo</string>
    <string name="web_client_id">387619323388-88bjrhipt7ai7jnlcrl60fvf7ah83tfb.apps.googleusercontent.com</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="account_sign_up">Don\'t Have An Account? Sign Up </string>
    <string name="account_login">Already Have An Account? Log In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="sign_in_vector">Sign In Icon</string>
    <string name="sign_in_link">Sign In Link</string>
    <string name="register_vector">Register Icon</string>
    <string name="alt_OR">OR</string>
    <string name="alt_google_login">Alternative Google Login</string>
    <string name="alt_facebook_login">Alternative Facebook Login</string>
    <string name="alt_x_login">Alternative X(Formerly Twitter) Login</string>
    <string name="welcome">"WELCOME!"</string>
    <string name="login_heading">Please Log In.</string>
    <string name="create_account">Create An Account</string>
    <string name="name_prompt">Full Name</string>
    <string name="email_address_prompt">Email Address</string>
    <string name="enter_password_prompt">Enter Password</string>
    <string name="confirm_password_prompt">Confirm Password</string>
    <string name="agree_text">I Agree to the Terms &amp; Conditions</string>
    <string name="close_button">Close Button</string>
    <string name="sign_up">Sign up</string>
    <string name="alt_auth">or continue with</string>
    <string name="skip">PROCEED AS GUEST</string>
    <string name="reset_pass">Reset Password</string>
    <string name="reg_email">Enter Registered Email</string>
    <string name="submit">Submit</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="continue_google">Continue With Google</string>
    <string name="search">Search</string>
    <string name="navigation_bar_home_button">Navigation Bar Home Button</string>
    <string name="navbar_add_note_button">Navigation Bar Add Note Button</string>
    <string name="navbar_profile_button">Navigation Bar Profile Button</string>
    <string name="my_notes">My Notes</string>
    <string name="settings">EchoNote App Settings</string>
    <string name="profile_pic">EchoNote Profile Picture</string>
    <string name="categories">Note Categories</string>
</resources>