<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:padding="16dp"
    tools:context=".ui.auth.PasswordResetActivity">

    <ImageView
        android:id="@+id/ic_logo_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_logo"
        android:transitionName="shared_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/appName_reset_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/caveatbrush_regular"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ic_logo_image"
        app:layout_constraintStart_toEndOf="@+id/ic_logo_image"
        app:layout_constraintTop_toTopOf="@id/ic_logo_image" />

    <ImageView
        android:id="@+id/ic_reset_close"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/close_button"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <ImageView
        android:id="@+id/ic_reset_password"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/sign_in_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_logo_image"
        app:srcCompat="@drawable/ic_reset_password" />

    <TextView
        android:id="@+id/reset_password_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/reset_pass"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_reset_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_email_textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/light_purple"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        android:layout_marginTop="32dp"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_password_textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_email_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/reg_email"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_email_textInputLayout" />

    <TextView
        android:id="@+id/reset_pass_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:contentDescription="@string/sign_in_link"
        android:focusable="true"
        android:text="@string/action_sign_in_short"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="14dp"
        android:textColor="@color/clickable_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
