<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    android:padding="16dp"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/ic_logo_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/app_logo"
        android:transitionName="shared_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/appName_login_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/caveatbrush_regular"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/ic_logo_image"
        app:layout_constraintStart_toEndOf="@+id/ic_logo_image"
        app:layout_constraintTop_toTopOf="@id/ic_logo_image" />

    <ImageView
        android:id="@+id/ic_login"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/sign_in_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_logo_image"
        app:srcCompat="@drawable/ic_user_signin" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_login" />

    <TextView
        android:id="@+id/login_heading_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_heading"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/alt_login_cardView"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_heading_textView"
        app:strokeWidth="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ic_login_google"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/alt_google_login"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_google"
                android:layout_marginStart="16dp"/>

            <TextView
                android:id="@+id/continue_google_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/continue_google"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/alt_login_divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alt_login_cardView">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@color/divider_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/alt_OR"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:background="@color/divider_color" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColorHint="@color/black"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:boxBackgroundColor="@color/light_purple"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconDrawable="@drawable/user_account_circle"
        app:endIconTint="@color/black"
        app:endIconMode="custom"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alt_login_divider">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="16dp"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/black"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/black"
        app:boxBackgroundColor="@color/light_purple"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_textInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingEnd="16dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textColor="@color/clickable_text"
        android:textSize="14sp"
        android:textStyle="bold"
        android:paddingTop="12dp"
        android:paddingBottom="17dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:minHeight="48dp"
        android:minWidth="48dp"
        app:layout_constraintEnd_toEndOf="@id/password_textInputLayout"
        app:layout_constraintTop_toBottomOf="@id/password_textInputLayout"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="281dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/action_sign_in_short"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/password_textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/account_sign_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/account_sign_up"
        android:textColor="@color/clickable_text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />


    <TextView
        android:id="@+id/skip_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/skip"
        android:textColor="@color/medium_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_goneMarginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

