<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="60dp"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    app:cardBackgroundColor="@color/black_2"
    app:cardCornerRadius="40dp"
    app:cardElevation="8dp"
    android:id="@+id/bottom_navbar_cardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/homeNavBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_mic"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/light_purple"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/navigation_bar_home_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addNoteBtn"
            app:layout_constraintHorizontal_chainStyle="spread_inside" />

        <ImageView
            android:id="@+id/addNoteBtn"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/add_circle"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/light_purple"
            android:contentDescription="@string/navbar_add_note_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/homeNavBtn"
            app:layout_constraintEnd_toStartOf="@id/profileBtn" />

        <ImageView
            android:id="@+id/profileBtn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_sparkle"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/light_purple"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/navbar_profile_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/addNoteBtn"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>